2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* irq/irq.c, misc/restart.c, rtc/rtc-config.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* misc/timer.c: Include <rtems/btimer.h>.
	Fix benchmark_timer_read() definition.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-12-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac, include/bspopts.h.in: More options.
	* include/lpc32xx.h: Added watchdog definitions.
	* include/mmu.h, misc/mmu.c: Added const qualifier.
	* startup/bspreset.c: Use watchdog reset.

2010-12-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/linkcmds.lpc32xx_mzx, startup/linkcmds.lpc32xx_mzx_stage_1,
	startup/linkcmds.lpc32xx_mzx_stage_2,
	startup/linkcmds.lpc32xx_phycore: Update due to linker command file
	changes.

2010-12-03	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/lpc32xx.h: Added I2S module.
	* Makefile.am, bsp_specs, preinstall.am, startup/bspstarthooks.c,
	startup/linkcmds.lpc32xx, startup/linkcmds.lpc32xx_mzx,
	startup/linkcmds.lpc32xx_mzx_stage_1,
	startup/linkcmds.lpc32xx_mzx_stage_2,
	startup/linkcmds.lpc32xx_phycore: Update due to linker command file
	changes.

2010-11-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtc/rtc-config.c: Fixed type.

2010-10-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/tm27.h: New file.
	* Makefile.am, preinstall.am: Reflect change above.
	* include/bsp.h: Fixed lpc32xx_micro_seconds_delay().
	* misc/timer.c: Support for timer tests.

2010-10-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/emc.h, include/i2c.h, include/lpc32xx.h, include/nand-mlc.h:
	Update for <bsp/utility.h> changes.

2010-09-28	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* misc/mmu.c: New file.
	* Makefile.am: Reflect change above.