@@ -7,16 +7,19 @@
  */
 
 /*
- * Copyright (c) 2010
- * embedded brains GmbH
- * Obere Lagerstr. 30
- * D-82178 Puchheim
- * Germany
- * <rtems@embedded-brains.de>
+ * Copyright (c) 2010, 2011 embedded brains GmbH.  All rights reserved.
+ *
+ *  embedded brains GmbH
+ *  Obere Lagerstr. 30
+ *  82178 Puchheim
+ *  Germany
+ *  <rtems@embedded-brains.de>
  *
  * The license and distribution terms for this file may be
  * found in the file LICENSE in this distribution or at
  * http://www.rtems.com/license/LICENSE.
+ *
+ * $Id$
  */
 
 #include <rtems.h>
@@ -25,7 +28,7 @@
 
 #include <bsp.h>
 
-void lpc32xx_restart(void *addr)
+void bsp_restart(void *addr)
 {
   ARM_SWITCH_REGISTERS;
   rtems_interrupt_level level;
